# VideoTemporalLabelingTool

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  README.zh.md  pyproject.toml  requirements.txt
src/vtlt/: __init__.py  __main__.py  app.py  service.py
