[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtlt"
version = "2.0.0"
description = "Video Temporal Labeling Tool - A GUI application for temporal video data labeling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pengnan Fan", email = "example@example.com"}
]
keywords = ["video", "labeling", "temporal", "annotation", "wxpython"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "wxPython>=4.2.0,<5.0",
    "pandas>=2.0.0,<3.0",
    "opencv-python>=4.9.0,<5.0",
    "numpy>=1.24.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jokebear-bot/VideoTemporalLabelingTool"
Repository = "https://github.com/jokebear-bot/VideoTemporalLabelingTool"
Issues = "https://github.com/jokebear-bot/VideoTemporalLabelingTool/issues"

[project.scripts]
vtlt = "vtlt.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vtlt = ["resource/*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
